--- a/app/src/main/res/layout/activity_check.xml
+++ b/app/src/main/res/layout/activity_check.xml
@@ -1,33 +1,82 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="400dp"
+    android:layout_height="500dp"
+    android:layout_gravity="center"
+    android:background="@color/white"
     tools:context=".CheckActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
-        <TextView
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="자가진단"
-            android:textSize="50sp"></TextView>
+            android:layout_weight="7">
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="자가진단"
+                android:textAlignment="center"
+                android:textColor="@color/black"
+                android:textSize="20dp">
+            </TextView>
+        </LinearLayout>
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_gravity="center"
-            android:layout_height="25dp"
-            android:layout_weight="1">
+            android:layout_height="0dp"
+            android:layout_weight="10"
+            android:paddingTop="0dp"
+            android:paddingBottom="0dp">
             <ImageButton
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:id="@+id/home"
-                android:src="@drawable/home"></ImageButton>
+                android:layout_weight="3"
+                android:id="@+id/btn1"
+                android:scaleType="fitXY"
+                android:src="@drawable/check" />
+
+            <ImageButton
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="3"
+                android:id="@+id/btn2"
+                android:scaleType="fitXY"
+                android:src="@drawable/drugstore" />
+
+            <ImageButton
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="3"
+                android:id="@+id/btn3"
+                android:scaleType="fitXY"
+                android:src="@drawable/doctor" />
+            <ImageButton
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="3"
+                android:id="@+id/btn4"
+                android:scaleType="fitXY"
+                android:src="@drawable/doctor" />
         </LinearLayout>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center">
+            <ImageButton
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.25"
+                android:id="@+id/home"
+                android:scaleType="fitXY"
+                android:src="@drawable/home" />
+        </LinearLayout>
+
     </LinearLayout>
 
 
