--- a/app/src/main/res/layout/activity_check.xml
+++ b/app/src/main/res/layout/activity_check.xml
@@ -33,36 +33,34 @@
             android:layout_weight="10"
             android:paddingTop="0dp"
             android:paddingBottom="0dp">
-            <ImageButton
+            <Button
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="3"
                 android:id="@+id/btn1"
                 android:scaleType="fitXY"
-                android:src="@drawable/check" />
-
-            <ImageButton
+                android:text="This is test" />
+            <Button
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="3"
                 android:id="@+id/btn2"
                 android:scaleType="fitXY"
-                android:src="@drawable/drugstore" />
-
-            <ImageButton
+                android:text="This is test" />
+            <Button
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="3"
                 android:id="@+id/btn3"
                 android:scaleType="fitXY"
-                android:src="@drawable/doctor" />
-            <ImageButton
+                android:text="This is test" />
+            <Button
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="3"
                 android:id="@+id/btn4"
                 android:scaleType="fitXY"
-                android:src="@drawable/doctor" />
+                android:text="This is test" />
         </LinearLayout>
         <LinearLayout
             android:layout_width="wrap_content"
