--- a/app/src/main/res/layout/activity_check.xml
+++ b/app/src/main/res/layout/activity_check.xml
@@ -14,16 +14,25 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:orientation="vertical"
             android:layout_weight="7">
             <TextView
                 android:id="@+id/textView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
+                android:layout_weight="0.1"
                 android:text="자가진단"
                 android:textAlignment="center"
                 android:textColor="@color/black"
                 android:textSize="20dp">
+            </TextView>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="질문리스트 여기다가 넣어 이 무자식아"
+                android:textColor="@color/black">
+<!--                너가 사이즈 조정해 이 자슥아-->
             </TextView>
         </LinearLayout>
         <LinearLayout
