--- a/app/src/main/res/layout/activity_check.xml
+++ b/app/src/main/res/layout/activity_check.xml
@@ -27,6 +27,7 @@
                 android:textColor="@color/black"
                 android:background="@drawable/buttonshape"
                 android:gravity="center"
+                android:layout_marginBottom="5dp"
                 android:textSize="25dp">
             </TextView>
             <TextView
@@ -38,6 +39,7 @@
                 android:textColor="@color/black"
                 android:textAlignment="center"
                 android:gravity="center"
+                android:layout_marginBottom="5dp"
                 android:background="@drawable/buttonshape"
                 android:textSize="18dp">
 <!--                너가 사이즈 조정해 이 자슥아-->
@@ -59,7 +61,7 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="10"
-            android:paddingTop="0dp"
+            android:paddingTop="5dp"
             android:paddingBottom="0dp">
             <Button
                 android:layout_width="match_parent"
@@ -69,6 +71,7 @@
                 android:scaleType="fitXY"
                 android:text="This is test"
                 android:textSize="15dp"
+                android:layout_marginBottom="5dp"
                 android:background="@drawable/buttonshape2"/>
             <Button
                 android:layout_width="match_parent"
@@ -78,6 +81,7 @@
                 android:scaleType="fitXY"
                 android:text="This is test"
                 android:textSize="15dp"
+                android:layout_marginBottom="5dp"
                 android:background="@drawable/buttonshape2"/>
             <Button
                 android:layout_width="match_parent"
@@ -87,6 +91,7 @@
                 android:scaleType="fitXY"
                 android:text="This is test"
                 android:textSize="15dp"
+                android:layout_marginBottom="5dp"
                 android:background="@drawable/buttonshape2"/>
             <Button
                 android:layout_width="match_parent"
@@ -101,14 +106,15 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center">
+            android:layout_gravity="right">
             <ImageButton
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.25"
+                android:layout_width="50dp"
+                android:layout_height="40dp"
+                android:layout_weight="0.1"
                 android:id="@+id/home"
                 android:scaleType="fitXY"
-                android:src="@drawable/home" />
+                android:src="@drawable/home"
+                android:background="@drawable/buttonshape"/>
         </LinearLayout>
 
     </LinearLayout>
