--- a/app/src/main/res/layout/activity_check.xml
+++ b/app/src/main/res/layout/activity_check.xml
@@ -108,12 +108,12 @@
             android:layout_height="wrap_content"
             android:layout_gravity="right">
             <ImageButton
-                android:layout_width="50dp"
-                android:layout_height="40dp"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
                 android:layout_weight="0.1"
                 android:id="@+id/home"
                 android:scaleType="fitXY"
-                android:src="@drawable/home"
+                android:src="@drawable/home1"
                 android:background="@drawable/buttonshape"/>
         </LinearLayout>
 
