--- a/app/src/main/res/layout/activity_check.xml
+++ b/app/src/main/res/layout/activity_check.xml
@@ -16,7 +16,8 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:layout_weight="7"
-            android:background="@drawable/buttonshape">
+            android:background="@drawable/buttonshape"
+            android:layout_margin="2dp">
             <TextView
                 android:id="@+id/textView"
                 android:layout_width="match_parent"
@@ -28,6 +29,7 @@
                 android:background="@drawable/buttonshape"
                 android:gravity="center"
                 android:layout_marginBottom="5dp"
+                android:layout_margin="2dp"
                 android:textSize="25dp">
             </TextView>
             <TextView
@@ -40,6 +42,7 @@
                 android:textAlignment="center"
                 android:gravity="center"
                 android:layout_marginBottom="5dp"
+                android:layout_margin="2dp"
                 android:background="@drawable/buttonshape"
                 android:textSize="18dp">
 <!--                너가 사이즈 조정해 이 자슥아-->
@@ -54,6 +57,7 @@
                 android:textAlignment="center"
                 android:gravity="center"
                 android:textColor="@color/black"
+                android:layout_margin="2dp"
                 android:background="@drawable/buttonshape"></TextView>
         </LinearLayout>
         <LinearLayout
@@ -72,7 +76,8 @@
                 android:text="This is test"
                 android:textSize="15dp"
                 android:layout_marginBottom="5dp"
-                android:background="@drawable/buttonshape2"/>
+                android:layout_margin="2dp"
+                android:background="@drawable/confirm2"/>
             <Button
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -82,7 +87,8 @@
                 android:text="This is test"
                 android:textSize="15dp"
                 android:layout_marginBottom="5dp"
-                android:background="@drawable/buttonshape2"/>
+                android:layout_margin="2dp"
+                android:background="@drawable/confirm2"/>
             <Button
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -90,9 +96,10 @@
                 android:id="@+id/btn3"
                 android:scaleType="fitXY"
                 android:text="This is test"
+                android:layout_margin="2dp"
                 android:textSize="15dp"
                 android:layout_marginBottom="5dp"
-                android:background="@drawable/buttonshape2"/>
+                android:background="@drawable/confirm2"/>
             <Button
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -101,7 +108,9 @@
                 android:scaleType="fitXY"
                 android:text="This is test"
                 android:textSize="15dp"
-                android:background="@drawable/buttonshape2"/>
+                android:layout_marginBottom="5dp"
+                android:layout_margin="2dp"
+                android:background="@drawable/confirm2"/>
         </LinearLayout>
         <LinearLayout
             android:layout_width="wrap_content"
