--- a/app/src/main/res/drawable/buttonconfirm.xml
+++ b/app/src/main/res/drawable/buttonconfirm.xml
@@ -4,7 +4,7 @@
         android:radius="14dp"
         />
     <solid
-        android:color="#0FF"
+        android:color="#0AF"
         />
     <padding
         android:left="0dp"
