--- a/app/src/main/res/layout/activity_check.xml
+++ b/app/src/main/res/layout/activity_check.xml
@@ -4,7 +4,7 @@
     android:layout_width="400dp"
     android:layout_height="500dp"
     android:layout_gravity="center"
-    android:background="@color/white"
+    android:background="@drawable/buttonshape"
     tools:context=".CheckActivity">
 
     <LinearLayout
@@ -16,7 +16,6 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:layout_weight="7"
-            android:background="@drawable/buttonshape"
             android:layout_margin="2dp">
             <TextView
                 android:id="@+id/textView"
@@ -29,7 +28,8 @@
                 android:background="@drawable/buttonshape"
                 android:gravity="center"
                 android:layout_marginBottom="5dp"
-                android:layout_margin="2dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginLeft="8dp"
                 android:textSize="25dp">
             </TextView>
             <TextView
@@ -42,7 +42,8 @@
                 android:textAlignment="center"
                 android:gravity="center"
                 android:layout_marginBottom="5dp"
-                android:layout_margin="2dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginLeft="8dp"
                 android:background="@drawable/buttonshape"
                 android:textSize="18dp">
 <!--                너가 사이즈 조정해 이 자슥아-->
@@ -57,7 +58,8 @@
                 android:textAlignment="center"
                 android:gravity="center"
                 android:textColor="@color/black"
-                android:layout_margin="2dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginLeft="8dp"
                 android:background="@drawable/buttonshape"></TextView>
         </LinearLayout>
         <LinearLayout
@@ -66,7 +68,8 @@
             android:layout_height="0dp"
             android:layout_weight="10"
             android:paddingTop="5dp"
-            android:paddingBottom="0dp">
+            android:paddingBottom="0dp"
+            android:layout_gravity="center">
             <Button
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -76,7 +79,8 @@
                 android:text="This is test"
                 android:textSize="15dp"
                 android:layout_marginBottom="5dp"
-                android:layout_margin="2dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginLeft="10dp"
                 android:background="@drawable/confirm2"/>
             <Button
                 android:layout_width="match_parent"
@@ -87,7 +91,8 @@
                 android:text="This is test"
                 android:textSize="15dp"
                 android:layout_marginBottom="5dp"
-                android:layout_margin="2dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginLeft="10dp"
                 android:background="@drawable/confirm2"/>
             <Button
                 android:layout_width="match_parent"
@@ -96,7 +101,8 @@
                 android:id="@+id/btn3"
                 android:scaleType="fitXY"
                 android:text="This is test"
-                android:layout_margin="2dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginLeft="10dp"
                 android:textSize="15dp"
                 android:layout_marginBottom="5dp"
                 android:background="@drawable/confirm2"/>
@@ -109,7 +115,8 @@
                 android:text="This is test"
                 android:textSize="15dp"
                 android:layout_marginBottom="5dp"
-                android:layout_margin="2dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginLeft="10dp"
                 android:background="@drawable/confirm2"/>
         </LinearLayout>
         <LinearLayout
