--- a/app/src/main/res/layout/activity_check.xml
+++ b/app/src/main/res/layout/activity_check.xml
@@ -27,6 +27,7 @@
                 android:textColor="@color/black"
                 android:background="@drawable/buttonshape"
                 android:gravity="center"
+                android:layout_marginTop="5dp"
                 android:layout_marginBottom="5dp"
                 android:layout_marginRight="8dp"
                 android:layout_marginLeft="8dp"
